--- a/api/lambda_functions/LambdaApiUserSignIn/requirements.txt
+++ b/api/lambda_functions/LambdaApiUserSignIn/requirements.txt
@@ -5,10 +5,9 @@
 # ###################################
 
 # ###################################
-# external python packages
-peewee==3.4.0
-psycopg2==2.7.3
-requests==2.20.1
+# pegged to praktikos-api/packages
+peewee==3.9.4
+psycopg2==2.8.2
 # ###################################
 
 -e.
