--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,13 @@ peewee==3.9.4
 psycopg2==2.8.2
 # ###################################
 
+# upgradable
+requests==2.21.0
+pip>=9.0.1
+tox>=2.4.1
+pytest>=3.0.3
+pytest-cov>=2.4.0
+pytest-gitignore>=1.3
+pytest-mock>=1.2
+
 -e.
