--- a/api/lambda_functions/LambdaApiUsers/requirements.txt
+++ b/api/lambda_functions/LambdaApiUsers/requirements.txt
@@ -5,7 +5,7 @@
 # ###################################
 
 # ###################################
-# pegged to praktikos-api/packages
+# pegged to praktikos-python-rdb/packages
 peewee==3.9.4
 psycopg2==2.8.2
 # ###################################
