--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ botocore==1.12.42
 # ###################################
 
 # ###################################
-# pegged to praktikos-api/packages
+# pegged to praktikos-python-rdb/packages
 peewee==3.9.4
 psycopg2==2.8.2
 # ###################################
@@ -21,5 +21,3 @@ pytest-mock>=1.2
 
 -e.
 
-# praktikos packages
--e git+git@github.com:praktikos/praktikos-configure-aws.git#egg=praktikos-configure-aws
