--- a/api/config.json
+++ b/api/config.json
@@ -16,7 +16,7 @@
   },
   "staging": {
     "database": "praktikos_staging",
-    "host": "",
+    "host": "XXXXXXXXX-staging-cluster.cluster-XXXXXXXXXXXX.us-east-1.rds.amazonaws.com",
     "port": 5432,
     "username": "sa",
     "password": "ChangeMe!",
