--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ install:
   - pip install -r requirements.txt
   - python --version
   - pip --version
-  - rm -rf $HOME/.aws/config $HOME/.aws/credentials
+  - rm -rf $HOME/.aws/credentials $HOME/.aws/credentials
 before_script:
   - psql -c 'CREATE DATABASE praktikos_test;' -U postgres
   - psql -c 'CREATE EXTENSION hstore;' praktikos_test -U postgres
