--- a/.travis.yml
+++ b/.travis.yml
@@ -20,11 +20,11 @@ install:
   - conda info -a
   - conda create -q -n test python=$TRAVIS_PYTHON_VERSION pytest pytest-cov coverage sphinx nose
   - source activate test
-  - pip install -U codecov
-  - pip install -r requirements.txt
-  - python --version
-  - pip --version
-  - rm -rf $HOME/.aws/credentials $HOME/.aws/credentials
+  - pip3 install -U codecov
+  - pip3 install -r requirements.txt
+  - python3 --version
+  - pip3 --version
+  - rm -rf $HOME/.aws/config $HOME/.aws/credentials
 before_script:
   - psql -c 'CREATE DATABASE praktikos_test;' -U postgres
   - psql -c 'CREATE EXTENSION hstore;' praktikos_test -U postgres
